# Sample

./: Makefile.am  NEWS  README  configure.ac
data/: Makefile.am  sample.desktop.in  sample.gresource.xml  vala-template.desktop.in  vala-template.gresource.xml
data/icons/: Makefile.am  vala-template.rc
data/ui/: app-window.ui  menus.ui
po/: POTFILES.in  POTFILES.skip  en.po  fr.po
src/: Makefile.am  config.vapi  main.vala  sample-app-window.vala  sample-app.vala  vala-template-app-window.vala  vala-template-app.vala
